--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  provider: ^6.0.2
+  cloud_firestore: ^3.1.12
+
+  firebase_core: ^1.14.1
+  firebase_auth: ^3.3.14
+  google_fonts: ^2.3.1
+  intl: ^0.17.0
+  dio: ^4.0.1
 
 dev_dependencies:
   flutter_test:
