--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,23 +29,35 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  provider: ^6.0.2
+  provider: ^5.0.0
   cloud_firestore: ^3.1.12
-
+  country_code_picker: ^2.0.2
   firebase_core: ^1.14.1
   firebase_auth: ^3.3.14
   google_fonts: ^2.3.1
   intl: ^0.17.0
   dio: ^4.0.1
+  sms_autofill: ^2.2.0
+  circular_countdown_timer: ^0.2.0
+  google_sign_in: ^5.3.0
+  connectivity_wrapper: ^1.0.6
+  cached_network_image: ^3.2.0
+  hive: ^2.1.0
+  hive_flutter: ^1.1.0
+  path_provider: ^2.0.9
+  pin_code_fields: ^7.4.0
+  file_picker: ^4.5.1
+  firebase_storage: ^10.2.12
+  image_cropper: ^1.5.1
+  flutter_svg: ^1.0.3
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.1.10
+  hive_generator: ^1.1.2
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -66,8 +78,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
